chore(sonar): clean 276 findings from initial local Sonar scan to zero
First run of `mvn -Psonar clean verify sonar:sonar` against the local SonarQube surfaced
276 open findings across 29 rules — of the initial 5 "BUG"-typed findings, all were the
volatile-singleton warning (S3077) on the classic double-checked-locking pattern, a
known false positive that has been suppressed with a comment; no real defects were
uncovered. Everything else was code-smell / style. All 276 driven to zero.

Bulk mechanical migrations (Jackson 3 + Java 16+ / Commons-Lang 3.20+ deprecations):

- `JsonNode.asText()` → `asString()` — 190 sites across 25 files.
- `JsonNode.isTextual()` → `isString()`, `JsonParser.getText()` → `getString()`,
  `new URL(...)` → `URI.create(...).toURL()`.
- `RandomStringUtils.random{Alphabetic,Alphanumeric,Numeric}` →
  `RandomStringUtils.insecure().next*` (tests + audit-field generators).
- `Stream.collect(Collectors.toList())` → `Stream.toList()` — 11 sites.
- Pattern-matching instanceof (`x instanceof T t` and use `t` directly).

Structural refactors (S3776 cognitive complexity, S6206 records, S107 large signatures):

- `CacheQuery.Criterion` promoted from a boilerplate value class to a `record`, with
  `toJsonNode` inlined as `expectedNode()`; utility class gets its private constructor.
- `CacheQuery.matchesGrouped` and `CacheQuery.readPath` decomposed into single-purpose
  helpers (`matchesPath`, `matchesValue`, `containsNull`, `resolveToken`,
  `resolveIndex`, `coercedNumberEquals`, `parseDecimalMatches`); empty catch blocks
  gained comments explaining why.
- `DurationUtil.formatDuration` decomposed via `addPiece` and `joinOxford`.
- `TokenEnforcer.validateWithRoles` split into `extractBearerToken`, `validateClaims`,
  `checkRoles`; `TokenEnforcer.extractRoles` split into `readRealmAccessRoles` and
  `readTopLevelRoles`.
- `DynamicJsonPatchCollectionCallback.handle` extracted into `parseBody`,
  `validateBody`, `buildPlan`, `rejectDuplicateIds`, `insertAt